<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="F_IncreaseTemperature" Id="{89493a0d-ce5a-49fa-90a2-aaa7c6e5a758}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_IncreaseTemperature

VAR_INPUT
	stMachine : REFERENCE TO ST_MachineOperatingParameters;
	tCycleTime : REAL;
END_VAR

VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[stMachine.fTemperature := stMachine.fTemperature + (stMachine.fHeatingConstant * tCycleTime);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>